# tarea3

./: .env.example  API.ipynb  DataPreprocessing.ipynb  README.md  clean_dataframe.csv  customer.csv  despliegue.ipynb  linear_model.pkl  models.ipynb  pruebas.ipynb  pyproject.toml  random_forest_model.pkl  score.py
data/01-preprocess/: encoded_dataframe.csv
models/: linear_model.pkl  modelo_fold1.keras
notebooks/: 00-data-preprocessing-00.ipynb  00-data-preprocessing-01.ipynb  01-train.ipynb  02-deploy.ipynb  03-test-api.ipynb  pruebas.ipynb
src/: score.py
