[project]
name = "tarea3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyodbc>=5.2.0",
    "scikit-learn>=1.6.1",
    "xgboost>=3.0.0",
]

[tool.uv.workspace]
members = [
    "tarea3",
]
