[project]
name = "tarea3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "azureml-core==1.60.0",
    "numpy==1.23.5",
    "pandas",
    "pyodbc>=5.2.0",
    "scikit-learn",
    "setuptools>=79.0.0",
]

[tool.uv.workspace]
members = [
    "tarea3",
]
